fix image display on mobile

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -106,6 +106,12 @@ figure {
   display: block;
   margin: 0;
   clear: both;
+  max-width: 100%;
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 
